<resources>
    <string name="app_name">Party Order</string>
    <string name="generic_unreadable_at_start" translatable="false">_initialized_</string>
    <string name="generic_IOError">I/O error</string>
    <string name="generic_connFailedWithError">Could not connect to host. System message:\n%1$s</string>
    <string name="generic_action_undo">Undo</string>
    <string name="generic_initializing">Initializing…</string>
    <string name="generic_lostServiceConn">Lost connection to internal service. Not supposed to happen. Maybe clearing some memory will help.</string>
    <string name="generic_carefulDlgTitle">Careful!</string>
    <string name="generic_nopeDlgTitle">No way out</string>
    <string name="generic_action_rename">Rename</string>
    <string name="generic_fatalError">Fatal error</string>
    <string name="generic_failedAdventuringServiceBind">Could not bind to internal \'adventuring\' structures. This is required to prevent data loss when you turn your phone (and other technicalities).\nThis should be a transient problem.</string>
    <string name="generic_validButTooEarly">Too fast. Try again.</string>
    <string name="master_publishing">Ready. Your friends can connect.</string>
    <string name="master_failedPublish">Could not publish the group to wi-fi. Your friends can still connect but only using explicit connections.</string>
    <string name="master_menu_showConnectionInfos">Show connection infos</string>
    <string name="master_carefulDlgMessage">Looks like someone is connected. If you continue, I will have to stop communicating.\n\nDo you want to go back to main menu?</string>
    <string name="master_exitConfirmedDlgAction">Interrupt operations</string>
    <string name="master_cannotBindPartyService">Failed to get an handle to the party creation service. This is required to work so I\'ll just stop there and no nothing. Try again, maybe after a reboot.</string>
    <string name="master_cannotBindAdventuringService">Failed to get an handle to the party adventuring service. This is required to work so I\'ll just stop there and no nothing. Try again, maybe after a reboot.</string>
    <string name="serviceRegFailed_msg">I cannot create the "heroes gather here" service. There\'s nothing I can do about it.\n(Error %1$s)</string>
    <string name="newPartyDeviceSelectionActivity_noDiscoveryManager">Looks like Network Service Discovery is unavailable. I require this thing to let your friends join the party.</string>
    <string name="btn_txt_attemptConnection">Connect</string>
    <string name="explicit_address">%1$s\n</string>
    <string name="badPort_msg">This does not look like a valid port number. Ports are usually between 1024 and 65535. Try again.</string>
    <string name="badHost_msg">Unable to connect to the specified host. Make sure you\'re specifying a valid host and the host is reachable (\'thethering\' will help). Try again.</string>
    <string name="badInitialServerReply_msg">Failed to parse server reply. This server is incompatible.</string>
    <string name="unexpectedInitialServerReply_msg">Server replied in an unexpected way. This server is incompatible.</string>
    <string name="card_group_version">Version: %1$d (%2$s)</string>
    <string name="card_group_options">Options: </string>
    <string name="card_group_sameVersion">matching</string>
    <string name="card_group_oldProtocol_upgradeMe">group protocol is more recent, please update this installation</string>
    <string name="card_group_oldProtocol_upgradeGroupOwner">group protocol is obsolete, please update party owner installation</string>
    <string name="joiningGroupIntro">Joining group</string>
    <string name="joiningGroupMsgInfo">To join a group, write a message to party owner. You must do that at least once.</string>
    <string name="joiningSendMsgBtn">Send</string>
    <string name="sentMsgInformations">Wait until party owner confirms you being in the group.</string>
    <string name="joiningDeviceWithHello_details">Device %1$d, connected from %2$s said:</string>
    <string name="joiningDeviceHello_acceptedCheckbox_nope">Tap to let in group</string>
    <string name="joinindDevice_kick">Reject</string>
    <string name="anonDeviceStats">%1$d silent %2$s connected.</string>
    <string name="talkingDeviceStats">%1$d %2$s talked, showing below.</string>
    <string name="explicitConnectionActivity_probingFeedback">Probing, please wait…</string>
    <string name="networkListening_groupNameTitle">Gathering party \"%1$s\"</string>
    <string name="cannotEnumerateNICs">Failed to get network information. This isn\'t really a problem but you\'ll have to find this device network address in some other way in case your friends need explicit connection data.</string>
    <string name="cannotStartSilentForming">"An error occurred while attempting to start accepting connections. I suggest to start again, possibly after rebooting device."</string>
    <string name="cannotAccept">A device tried to connect to the group but something went wrong in the process.</string>
    <string name="ohNo_pgsAreGone">Lost connection to device managing characters %1$s.</string>
    <string name="ohNo_talkingIsGone">Lost connection to device, last words: %1$s</string>
    <string name="lostConnectionToServer">Connection to server lost or closed unexpectedly.</string>
    <string name="protocolVersionMismatch">Server is running protocol %1$d but client requires %2$d.\nPlease update %3$s device.</string>
    <string name="protocolVersionMismatch_upgradeThis">this</string>
    <string name="protocolVersionMismatch_upgradeServer">party owner</string>
    <string name="networkDiscoveryStartFailed">Cannot start network discovery. Error %1$s.</string>
    <string name="card_joinableGroup_talkHint">Message to join</string>
    <string name="card_group_sayButton">Send</string>
    <string name="card_group_charCount">%1$d / %2$d</string>
    <string name="sendMessageErrorDesc">"Error detected while attempting to send message to party owner. Details: "</string>
    <string name="saySomethingToServer_emptyForbidden">Empty messages are forbidden.</string>
    <string name="saySomethingToServer_tooLong">Message too long. It might be displayed partially or not at all. Go back and fit the given budget.</string>
    <string name="card_joinableGroup_lengthMaxDivisor"> / </string>
    <string name="kickDevice_title">Hide device?</string>
    <string name="kickDevice_msg">Further interaction with the device will be silenced. This operation cannot currently be reverted but client can quit and join again at any time.</string>
    <string name="kickDevice_positive">Hide</string>
    <string name="card_joining_device_groupMemberCheck">Group member!</string>
    <string name="joinForming_earlyDisconnect">Disconnected from a party before I could identify it.</string>
    <string name="joinForming_groupLostReport">Disconnected from group %1$s (hosted at %2$s).</string>
    <string name="createParty_charTableHeader_charName">Name</string>
    <string name="createParty_charTableHeader_initBonus">Initiative</string>
    <string name="createParty_charTableHeader_createdBy">Creator</string>
    <string name="card_character_nameHint">Character name</string>
    <string name="card_joiningCharacter_healthPoints">Health points</string>
    <string name="card_joiningCharacter_initBonus">Initiative bonus</string>
    <string name="card_joiningCharacter_sendButton">Send</string>
    <string name="atLeastOneFailedWriteSync">At least one failed .writeSync calls.</string>
    <string name="createPartyActivity_failedPCDefinitionSwitch">Could not switch to playing character definition mode. I suggest starting from scratch. Details:\n%1$s</string>
    <string name="card_joiningCharacter_experience">Experience</string>
    <string name="phaseDefiningCharacters">Defining characters</string>
    <string name="card_joiningCharacter_accepted">Accepted!</string>
    <string name="card_joiningCharacter_refuseButton">Refuse</string>
    <string name="card_joiningCharacter_acceptButton">Accept</string>
    <string name="vhCA_acceptedIconContentDesc">Tick</string>
    <string name="vhCA_acceptedCharacter">Character accepted.</string>
    <string name="joinGroupActivity_multipleGroupKeys">Party owner just tried to redefine key for the active group. This is very odd and might result in malfunctions.</string>
    <string name="joinGroupActivity_multiKeyMismatching">You were accepted in some other group than the one you\'re on already. I\'ll just ignore this, carry on. Try to join a single group next time (in doubt, try explicit connection)</string>
    <string name="activity_join_group_addCharacterButton">Add another character</string>
    <string name="charInputValidation_badName">Must have a name.</string>
    <string name="charInputValidation_hpMustBePositive">Health points must be positive.\n</string>
    <string name="charInputValidation_hpMustBeInteger">Health points must be a number.\n</string>
    <string name="charInputValidation_lvlMustBePositive">Level must be positive.\n</string>
    <string name="charInputValidation_lvlMustBeInteger">Level must be a number.\n</string>
    <string name="charInputValidation_initMustBeNumber">Initiative must be a number.\n</string>
    <string name="charInputValidation_xpMustBePositive">Experience must be at least 0.\n</string>
    <string name="charInputValidation_xpMustBeNumeric">Experience points must be a number.\n</string>
    <string name="charInputValidation_badCharacter_title">Not a valid character</string>
    <string name="charInputValidation_badCharacter_msgHint">Go back and try again.</string>
    <string name="ncpa_failedSend">Failed to send character data to party owner, detailed error follows:\n</string>
    <string name="CreatePartyActivity_definingCharactersFeedback">Players can now define playing characters. They can define more than one for each device part of the group.\nTheir characters will appear below.</string>
    <string name="card_joiningCharacter_sentFeedback">Sent. Waiting reply.</string>
    <string name="createPartyActivity_PCDefDiscarded_badExperience">Bad character: experience must be positive.</string>
    <string name="createPartyActivity_PCDefDiscarded_badHealth">Bad character: health points must be at least 1.</string>
    <string name="createPartyActivity_PCDefDiscarded_badName">Bad character: must have a name.</string>
    <string name="createPartyActivity_PCDefDiscarded_badLevel">Bad character: level must be at least 1.</string>
    <string name="createPartyActivity_newGroupSaved_startSession">Start a new session</string>
    <string name="createPartyActivity_allPCAreHereWeAreDone">Make party</string>
    <string name="veryBadError">Very bad error</string>
    <string name="card_joining_character_client_input_level">Level</string>
    <string name="mma_newParty">Assemble a new party</string>
    <string name="mma_joinNewParty">Join a new party</string>
    <string name="mma_pickParty">Pick a party…</string>
    <string name="mma_loading">Loading data…</string>
    <string name="cardOPS_iconDesc">Owned party icon</string>
    <string name="cardOPS_title">Owned parties</string>
    <string name="cardOPS_desc">Parties generated and stored on this device. You have full control and you can host games.</string>
    <string name="vhJP_statusIcon">Party join status</string>
    <string name="vhJP_options">Options: %1$s</string>
    <string name="vhJP_attemptJoin">Attempt join</string>
    <string name="vhJP_iGottaKey">Looks like I have a key for this one.</string>
    <string name="dlgSDN_title">Rename device</string>
    <string name="dlgSDN_newNameHint">New name</string>
    <string name="dlgSDN_visibilityNote">Device names are visible only from this device.</string>
    <string name="mara_next_title">Pass round to next player</string>
    <string name="mara_next_titleShort">Next</string>
    <string name="mara_dlg_shuffle_title">Delay action</string>
</resources>