<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_swap_vert_white_24dp"
        android:id="@+id/mara_menu_shuffle"
        android:title="@string/mara_dlg_shuffle_title"
        android:titleCondensed="@string/mara_dlg_shuffle_title"
        app:showAsAction="ifRoom" />
    <item android:icon="@mipmap/ic_skip_next_white_24dp"
        android:id="@+id/mara_menu_done"
        android:title="@string/mara_next_title"
        android:titleCondensed="@string/mara_next_titleShort"
        app:showAsAction="ifRoom" />
    <item android:icon="@mipmap/ic_done_white_24dp"
        android:id="@+id/mara_menu_doneConfirmed"
        android:title="@string/mara_next_title"
        android:titleCondensed="@string/mara_next_titleShort"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>