<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:rowCount="9" android:columnCount="4">

    <EditText
        android:id="@+id/card_joiningCharacter_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/card_joiningCharacter_nameHint"
        android:inputType="textCapWords|textPersonName|text"
        android:layout_row="0" android:layout_column="0" android:layout_columnSpan="3"
        android:layout_width="match_parent" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/card_joiningCharacter_healthPoints"
        android:id="@+id/textView5"
        android:layout_row="1" android:layout_column="0"
        android:layout_columnSpan="2" />

    <EditText
        android:inputType="number"
        android:id="@+id/card_joiningCharacter_hp"
        android:singleLine="true"
        android:gravity="center_horizontal"
        android:layout_row="1" android:layout_column="2"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/card_joiningCharacter_initBonus"
        android:id="@+id/textView6"
        android:layout_row="2" android:layout_column="1" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/card_joiningCharacter_experience"
        android:id="@+id/textView7"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="number"
        android:id="@+id/card_joiningCharacter_initBonus"
        android:singleLine="true"
        android:gravity="center_horizontal"
        android:layout_row="2" android:layout_column="2"
        android:layout_gravity="fill_horizontal|center_horizontal" />

    <EditText
        android:inputType="number"
        android:id="@+id/card_joiningCharacter_xp"
        android:singleLine="true"
        android:gravity="center_horizontal"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/generic_unreadable_at_start"
        android:id="@+id/card_joiningCharacter_serverStatus"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:visibility="gone" />

    <Button
        android:text="@string/card_joiningCharacter_sendButton"
        android:id="@+id/card_joiningCharacter_sendButton"
        android:layout_row="5" android:layout_column="2"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_gravity="right" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_joiningCharacter_refuseButton"
        android:id="@+id/card_joiningCharacter_refuseButton"
        android:layout_row="6"
        android:layout_column="1"
        android:visibility="visible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_joiningCharacter_acceptButton"
        android:id="@+id/card_joiningCharacter_acceptButton"
        android:layout_row="6"
        android:layout_column="2"
        android:visibility="visible"
        android:layout_gravity="right" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_joiningCharacter_accepted"
        android:id="@+id/card_joiningCharacter_accepted"
        android:layout_row="7"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:checked="true"
        android:enabled="false"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/card_joiningCharacter_sentFeedback"
        android:id="@+id/card_joiningCharacter_sentFeedback"
        android:layout_row="8"
        android:layout_column="1"
        android:visibility="gone" />

</GridLayout>