<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/joiningGroupIntro"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/generic_unreadable_at_start"
        android:id="@+id/groupName"
        android:textStyle="bold"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/joiningGroupMsgInfo"
        android:id="@+id/textView6"
        android:layout_below="@+id/groupName"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joiningSendMsgBtn"
        android:id="@+id/sendHelloBtn"
        android:layout_below="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/masterMessage"
        android:layout_toLeftOf="@+id/sendHelloBtn"
        android:layout_toStartOf="@+id/sendHelloBtn"
        android:inputType="textAutoComplete|textAutoCorrect"
        android:layout_alignTop="@+id/sendHelloBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sentMsgInformations"
        android:id="@+id/postSendInfos"
        android:layout_below="@+id/masterMessage"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>