<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vhJP_statusIcon"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/vhJP_statusIcon"
        android:src="@mipmap/ic_lock_black_48dp"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/generic_unreadable_at_start"
        android:id="@+id/vhJP_name"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/vhJP_statusIcon"
        android:layout_toEndOf="@+id/vhJP_statusIcon"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/vhJP_options"
        android:id="@+id/vhJP_options"
        android:layout_below="@+id/vhJP_name"
        android:layout_toRightOf="@+id/vhJP_statusIcon"
        android:layout_toEndOf="@+id/vhJP_statusIcon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/generic_unreadable_at_start"
        android:id="@+id/vhJP_pcList"
        android:layout_below="@+id/vhJP_options"
        android:layout_toRightOf="@+id/vhJP_statusIcon"
        android:layout_toEndOf="@+id/vhJP_statusIcon" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vhJP_attemptJoin"
        android:id="@+id/vhJP_attemptJoin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/vhJP_iGottaKey"
        android:id="@+id/vhJP_iGottaKey"
        android:layout_above="@+id/vhJP_attemptJoin"
        android:layout_centerHorizontal="true" />
</RelativeLayout>