<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardTheme">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:rowCount="6" android:columnCount="4">

        <TextView
            android:id="@+id/card_joiningCharacter_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/card_character_nameHint"
            android:layout_row="0" android:layout_column="0" android:layout_columnSpan="3"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_joiningCharacter_level"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/card_joining_character_client_input_level"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/card_joiningCharacter_healthPoints"
            android:id="@+id/textView5"
            android:layout_row="1" android:layout_column="0"
            android:visibility="visible" />

        <TextView
            android:id="@+id/card_joiningCharacter_hp"
            android:singleLine="true"
            android:layout_row="1" android:layout_column="2"
            android:layout_width="wrap_content"
            android:selectAllOnFocus="true"
            android:visibility="visible"
            android:gravity="right"
            android:layout_gravity="right"
            android:text="@string/generic_unreadable_at_start"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/card_joiningCharacter_initBonus"
            android:id="@+id/textView6"
            android:layout_row="3" android:layout_column="0"
            android:visibility="visible" />

        <TextView
            android:id="@+id/card_joiningCharacter_initBonus"
            android:singleLine="true"
            android:layout_row="3" android:layout_column="2"
            android:selectAllOnFocus="true"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:text="@string/generic_unreadable_at_start"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/card_joiningCharacter_experience"
            android:id="@+id/textView7"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <TextView
            android:id="@+id/card_joiningCharacter_xp"
            android:singleLine="true"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:visibility="visible"
            android:layout_gravity="right"
            android:text="@string/generic_unreadable_at_start"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_joiningCharacter_refuseButton"
            android:id="@+id/card_joiningCharacter_refuseButton"
            android:layout_row="5"
            android:layout_column="0"
            android:visibility="visible"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />

        <Space
            android:layout_width="12sp"
            android:layout_height="12sp"
            android:layout_row="5"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_joiningCharacter_acceptButton"
            android:id="@+id/card_joiningCharacter_acceptButton"
            android:layout_row="5"
            android:layout_column="3"
            android:visibility="visible"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />

    </GridLayout>
</android.support.v7.widget.CardView>