<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.massimodz8.collaborativegrouporder.MainMenuActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/activityRoot">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mma_pickParty"
        android:id="@+id/mma_goAdventuring"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        android:onClick="pickParty_callback" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mma_newParty"
        android:id="@+id/mma_newParty"
        android:onClick="startCreateParty_callback"
        android:enabled="false"
        android:drawableLeft="@mipmap/ic_owned_party"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mma_joinNewParty"
        android:id="@+id/mma_joinParty"
        android:onClick="startJoinGroupActivity_callback"
        android:enabled="false"
        android:drawableLeft="@mipmap/ic_joined_party"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mma_progress"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:indeterminateOnly="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mma_loading"
        android:id="@+id/mma_waitMessage"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
